testsuite/tests/dependent/should_fail/T14066g.stderr

T14066g.hs:9:1: error:
    • These kind and type variables: a (b :: a) (d :: SameKind c b)
      are out of dependency order. Perhaps try this ordering:
        a (b :: a) (c :: a) (d :: SameKind c b)
      NB: Implicitly declared variables come before others.
    • In the data type declaration for ‘Q’
